# timer-sentinel

./: .gitginore  .gitignore  .pre-commit-config.yaml  .ruff.toml  CHANGELOG.md  LICENSE  MANIFEST.in  Makefile  README.md  pyproject.toml  tox.ini
.github/workflows/: ci.yml  publish-pypi.yml  publish-testpypi.yml  publish.yml
src/timer_sentinel/: __init__.py  core.py
tests/: test_core.py
