[project]
name = "timer-sentinel"
version = "0.1.0"
description = ""
authors = [
    {name = "aaron"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
]

[tool.poetry]
packages = [{include = "timer_sentinel", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pytest (>=9.0.2,<10.0.0)",
    "pytest-asyncio (>=1.3.0,<2.0.0)",
    "tox (>=4.35.0,<5.0.0)",
    "pytest-cov (>=7.0.0,<8.0.0)"
]
