[tool.poetry]
name = "timer-sentinel"
version = "1.0.2.dev3"
description = "A simple, efficient timer for monitoring execution time and logging threshold violations"
readme = "README.md"
license = "MIT"
authors = ["Aaron Ojeda"]
keywords = ["timer", "monitoring", "performance", "logging", "decorator"]
classifiers = [
        "Development Status :: 4 - Beta",
        "Intended Audience :: Developers",
        "License :: OSI Approved :: MIT License",
        "Programming Language :: Python :: 3",
        "Programming Language :: Python :: 3.10",
        "Programming Language :: Python :: 3.11",
        "Programming Language :: Python :: 3.12",
        "Programming Language :: Python :: 3.13",
        "Programming Language :: Python :: 3.14",
]
packages = [
    { include = "timer_sentinel", from = "src" }
]

[tool.poetry.dependencies]
python = ">=3.10,<3.15"

[tool.poetry.group.dev.dependencies]
pytest = ">=9.0.2"
pytest-asyncio = ">=1.3.0"
pytest-cov = ">=4.1.0"
tox = ">=4.35.0"
twine = "^6.2.0"

[tool.poetry.urls]
Repository = "https://github.com/aaronojedait/timer-sentinel"
Issues = "https://github.com/aaronojedait/timer-sentinel/issues"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
asyncio_mode = "auto"

[tool.coverage.run]
source = ["src"]

[tool.coverage.report]
exclude_lines = ["pragma: no cover"]
